--- a/src/main/resources/static/css/style_select.css
+++ b/src/main/resources/static/css/style_select.css
@@ -15,6 +15,20 @@ a, a:visited {
 a:hover, a:active, a:focus {
 	background-color: transparent;
 }
+
+.identity_head {
+	height: 50px;
+	width: 50px;
+	margin-top: -60px;
+	background: #d5d5d5;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	color: #fff;
+	font-size: 2em;
+	text-align: center;
+	line-height: 50px;
+}
 .pt1{
 /*	margin-left: 20px;*/
 }
